Prevent page shift in theater mode on play

--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -389,7 +389,7 @@ body {
 
 .main--theater-mode {
   padding-left: 0;
-  padding-right: 0;
+  padding-right: var(--body-scrollbar-width);
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
